--- a/src/main/resources/pages/index.html
+++ b/src/main/resources/pages/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div>
-<form id="auth" method="POST" action="/auth.html">
+<form id="auth" method="POST" action="localhost:8080/clientchat/auth.html">
 	<span>Login</span><input type="text" name="login" id="login" />
 	<span>Password</span><input type="password" name="password" id="password">
 	<button onclick="submit">Отправить</button>
